# fighnd

./: .gitignore  README.org  pyproject.toml
src/fighnd/: LICENCE  __init__.py  config.py  main.py
src/fighnd/backend/: __init__.py  _database.py  database.py  imageprocess.py  io.py
src/fighnd/frontend/: __init__.py  gallery.py  image.py  route.py  share.py
