[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "fighnd"
description = "Figure management app."
readme = "README.rst"
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3"
]
dynamic = ["version"]
requires-python = ">=3.12.0"
dependencies = [
    "numpy",
    "flet",
]
authors = [{name = "sugayu"}]
maintainers = [{name = "sugayu"}]

[project.urls]
Repository = "https://github.com/sugayu/fighnd.git"

[project.scripts]
fighnd = "fighnd.main:launch"

[tool.setuptools.dynamic]
version = {attr = "fighnd.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
skip-string-normalization = true

[tool.mypy]

[[tool.mypy.overrides]]
module = [
       'flet.*'
]
ignore_missing_imports = true
